--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ serde-wasm-bindgen = "0.6"
 uuid = { version = "1.0", features = ["v4", "js"] }
 console_error_panic_hook = "0.1"
 base64 = "0.21"  # For embedding WASM as base64
-sqlite-wasm-rs = { version = "0.3", default-features = false, features = ["precompiled"] }
+sqlite-wasm-rs = { version = "=0.3.0", default-features = false, features = ["precompiled"] }
 
 [features]
 default = []
