--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ uuid = { version = "1.0", features = ["v4", "js"] }
 console_error_panic_hook = "0.1"
 base64 = "0.21"  # For embedding WASM as base64
 sqlite-wasm-rs = { version = "=0.3.0", default-features = false, features = ["precompiled"] }
+rain-math-float = { path = "lib/rain.math.float/crates/float"}
 
 [features]
 default = []
