--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,17 @@
-[package]
-name = "sqlite-worker"
+[workspace]
+members = [
+    "packages/sqlite-worker-core",
+    "packages/sqlite-worker"
+]
+resolver = "2"
+
+[workspace.package]
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
+homepage = "https://github.com/example/sqlite-worker"
 
-[lib]
-crate-type = ["cdylib"]
-
-[dependencies]
+[workspace.dependencies]
 wasm-bindgen = "0.2"
 wasm-bindgen-futures = "0.4"
 js-sys = "0.3"
@@ -30,20 +35,14 @@ serde_json = "1.0"
 serde-wasm-bindgen = "0.6"
 uuid = { version = "1.0", features = ["v4", "js"] }
 console_error_panic_hook = "0.1"
-base64 = "0.21"  # For embedding WASM as base64
+base64 = "0.21"
 sqlite-wasm-rs = { version = "=0.3.0", default-features = false, features = ["precompiled"] }
-rain-math-float = { path = "lib/rain.math.float/crates/float"}
 alloy = { version = "1.0.9", features = ["sol-types", "json", "json-abi"] }
-
-[features]
-default = []
-embed_wasm = []
-
-# [build-dependencies]
-# wasm-bindgen-cli would be needed as a CLI tool, not as a Rust dependency
+thiserror = "2.0.12"
+proptest = "1.7.0"
+revm = { version = "25.0.0", default-features = false }
+wasm-bindgen-utils = { git = "https://github.com/rainlanguage/rain.wasm", rev = "06990d85a0b7c55378a1c8cca4dd9e2bc34a596a" }
 
 [profile.release]
 opt-level = "z"
 lto = true
-
-# Export both main thread and worker functions
