--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ resolver = "2"
 version = "0.1.0"
 edition = "2021"
 license = "MIT"
-homepage = "https://github.com/example/sqlite-worker"
+homepage = "https://github.com/rainlanguage/sqlite-wasm-rs-test"
 
 [workspace.dependencies]
 wasm-bindgen = "0.2"
@@ -27,8 +27,7 @@ web-sys = { version = "0.3", features = [
     "DedicatedWorkerGlobalScope",
     "Navigator",
     "Window",
-    "Location",
-    "console"
+    "Location"
 ]}
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
