--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 members = [
-    "packages/sqlite-worker-core",
-    "packages/sqlite-worker"
+    "packages/sqlite-web-core",
+    "packages/sqlite-web"
 ]
 resolver = "2"
 
