--- a/.github/workflows/test-wasm.yaml
+++ b/.github/workflows/test-wasm.yaml
@@ -36,7 +36,7 @@ jobs:
           # 1G = 1073741824
           gc-max-store-size-linux: 1G
 
-      - run: nix develop -c cargo fmt --all -- --check
+      - run: nix develop -c cargo fmt --workspace -- --check
 
       - run: nix develop -c rainix-rs-static
 
