--- a/.github/workflows/test-ui.yaml
+++ b/.github/workflows/test-ui.yaml
@@ -36,7 +36,7 @@ jobs:
           # 1G = 1073741824
           gc-max-store-size-linux: 1G
 
-      - run: nix develop -c rainix-sol-prelude
+      - run: nix develop -c build-submodules
 
       - run: nix develop -c test-ui
 
