--- a/.github/workflows/test-wasm.yaml
+++ b/.github/workflows/test-wasm.yaml
@@ -36,7 +36,7 @@ jobs:
           # 1G = 1073741824
           gc-max-store-size-linux: 1G
 
-      - run: nix develop -c rainix-sol-prelude
+      - run: nix develop -c build-submodules
 
       - run: echo "// Generated file placeholder" > packages/sqlite-web/src/embedded_worker.js
 
