--- a/packages/sqlite-web/Cargo.toml
+++ b/packages/sqlite-web/Cargo.toml
@@ -14,6 +14,7 @@ web-sys = { workspace = true }
 base64 = { workspace = true }
 wasm-bindgen-utils = { workspace = true }
 serde = { workspace = true }
+serde_json = { workspace = true }
 thiserror = { workspace = true }
 
 [features]
