remove package.json from gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 /target
-/pkg
+/pkg/*
+!pkg/package.json
 # Generated files from bundle.sh
 packages/sqlite-web/src/embedded_worker.js
 pkg/sqlite_web_bg.wasm.b64
