--- a/packages/sqlite-web-core/Cargo.toml
+++ b/packages/sqlite-web-core/Cargo.toml
@@ -19,6 +19,7 @@ console_error_panic_hook = { workspace = true }
 sqlite-wasm-rs = { workspace = true }
 rain-math-float = { path = "../../lib/rain.math.float/crates/float"}
 alloy = { workspace = true }
+base64 = { workspace = true }
 
 [dev-dependencies]
 wasm-bindgen-test = { workspace = true }
