--- a/.github/workflows/npm-release.yaml
+++ b/.github/workflows/npm-release.yaml
@@ -112,7 +112,13 @@ jobs:
       # publish sqlite-web pkg to npm
       - name: Publish sqlite-web pkg To NPM
         if: ${{ env.OLD_HASH != env.NEW_HASH }}
-        run: npm publish sqlite_web_npm_package_${{ env.NEW_VERSION }}.tgz --access public --tag alpha --provenance
+        env:
+          NODE_AUTH_TOKEN: ""
+        run: |
+          npm publish sqlite_web_npm_package_${{ env.NEW_VERSION }}.tgz \
+            --access public \
+            --tag alpha \
+            --provenance
 
       # Create gitHub release with tarballs
       - name: Create GitHub Release with sqlite-web pkg
