--- a/.github/workflows/npm-release.yaml
+++ b/.github/workflows/npm-release.yaml
@@ -5,14 +5,14 @@ on:
       - main
 
 jobs:
-  prepare:
+  release:
     if: ${{ github.ref == 'refs/heads/main' && !startsWith(github.event.head_commit.message, 'NPM Package Release') }}
     runs-on: ubuntu-latest
     permissions:
+      id-token: write
       contents: write
     outputs:
       version: ${{ env.NEW_VERSION }}
-      should_publish: ${{ env.OLD_HASH != env.NEW_HASH }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -35,6 +35,7 @@ jobs:
         run: npm install -g npm@latest && npm --version
 
       - run: nix develop -c build-submodules
+
       - run: nix develop -c local-bundle
 
       - name: Install Playwright browsers with dependencies
@@ -50,12 +51,14 @@ jobs:
           git config --global user.email "${{ secrets.CI_GIT_EMAIL }}"
           git config --global user.name "${{ secrets.CI_GIT_USER }}"
 
+      # get hash of latest published pkgs from npm and concat them
       - name: Get Old Hash
         run: |
           OLD_HASH=$(npm view @rainlanguage/sqlite-web@latest dist.shasum 2>/dev/null || echo "none")
           echo "OLD_HASH=$OLD_HASH" >> $GITHUB_ENV
           echo "old hash: $OLD_HASH"
 
+      # Build the package and calc hash
       - name: Build and Get New Hash
         run: |
           nix develop -c local-bundle
@@ -64,6 +67,9 @@ jobs:
           echo "new hash: $NEW_HASH"
           rm -f pkg/*.tgz
 
+      # from here on, we'll skip if OLD_HASH and NEW_HASH are the same (ie no publish)
+      # this means we need to skip every step by using an if statement.
+      # set npm version in pkg directory
       - name: Set Version
         if: ${{ env.OLD_HASH != env.NEW_HASH }}
         run: |
@@ -75,6 +81,7 @@ jobs:
             rm "$manifest".bak
           done
 
+      # Commit changes and tag
       - name: Commit And Tag
         if: ${{ env.OLD_HASH != env.NEW_HASH }}
         run: |
@@ -82,6 +89,7 @@ jobs:
           git commit -m "NPM Package Release v${{ env.NEW_VERSION }}"
           git tag npm-v${{ env.NEW_VERSION }}
 
+      # Push the commit to remote
       - name: Push Changes To Remote
         if: ${{ env.OLD_HASH != env.NEW_HASH }}
         run: |
@@ -90,58 +98,35 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  publish:
-    needs: prepare
-    if: ${{ needs.prepare.outputs.should_publish == 'true' }}
-    runs-on: ubuntu-latest
-    permissions:
-      id-token: write
-      contents: read
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          ssh-key: ${{ secrets.PUBLISH_PRIVATE_KEY }}
-          submodules: recursive
-          fetch-depth: 0
-
-      - uses: DeterminateSystems/nix-installer-action@main
-        with:
-          determinate: true
-      - uses: DeterminateSystems/flakehub-cache-action@main
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "24.x"
-          registry-url: "https://registry.npmjs.org"
-
-      - name: Update npm to latest
-        run: npm install -g npm@latest && npm --version
-
-      - run: nix develop -c build-submodules
-      - run: nix develop -c local-bundle
-
+      # Create sqlite-web npm package tarball
       - name: Create sqlite-web NPM Package Tarball
+        if: ${{ env.OLD_HASH != env.NEW_HASH }}
         run: |
           cd pkg
           echo "NPM_PACKAGE=$(npm pack --silent)" >> $GITHUB_ENV
 
       - name: Rename sqlite-web NPM Package Tarball
-        run: mv pkg/${{ env.NPM_PACKAGE }} sqlite_web_npm_package_${{ needs.prepare.outputs.version }}.tgz
+        if: ${{ env.OLD_HASH != env.NEW_HASH }}
+        run: mv pkg/${{ env.NPM_PACKAGE }} sqlite_web_npm_package_${{ env.NEW_VERSION }}.tgz
 
+      # publish sqlite-web pkg to npm
       - name: Publish sqlite-web pkg To NPM
+        if: ${{ env.OLD_HASH != env.NEW_HASH }}
         run: |
-          npm publish sqlite_web_npm_package_${{ needs.prepare.outputs.version }}.tgz \
+          npm publish sqlite_web_npm_package_${{ env.NEW_VERSION }}.tgz \
             --access public \
             --tag alpha \
             --provenance
 
+      # Create gitHub release with tarballs
       - name: Create GitHub Release with sqlite-web pkg
+        if: ${{ env.OLD_HASH != env.NEW_HASH }}
+        id: gh_release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: npm-v${{ needs.prepare.outputs.version }}
-          name: NPM Package Release v${{ needs.prepare.outputs.version }}
+          tag_name: npm-v${{ env.NEW_VERSION }}
+          name: NPM Package Release v${{ env.NEW_VERSION }}
           files: |
-            sqlite_web_npm_package_${{ needs.prepare.outputs.version }}.tgz
+            sqlite_web_npm_package_${{ env.NEW_VERSION }}.tgz
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
