--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,8 @@ web-sys = { version = "0.3", features = [
     "FileSystemDirectoryHandle",
     "FileSystemHandle",
     "FileSystemRemoveOptions",
-    "FileSystemGetDirectoryOptions"
+    "FileSystemGetDirectoryOptions",
+    "DomException"
 ]}
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
