--- a/packages/sqlite-web/Cargo.toml
+++ b/packages/sqlite-web/Cargo.toml
@@ -2,6 +2,7 @@
 name = "sqlite-web"
 version = "0.0.1-alpha.20"
 edition = "2021"
+repository = "https://github.com/rainlanguage/sqlite-web"
 
 [lib]
 crate-type = ["cdylib"]
